# lightweight-charts-server

./: .gitignore  README.md  line_indicators.py  pyproject.toml  requirements.txt  sample.py  setting_data.py  styling.py
.github/workflows/: release.yml
chart_server/: main.py
chart_server/static/: inject.js  main.html
examples/1_setting_data/: setting_data.py
examples/2_live_data/: live_data.py
examples/3_tick_data/: tick_data.py
examples/4_line_indicators/: line_indicators.py
examples/5_styling/: styling.py
lightweight_charts_server/: __init__.py  display.py  ftype.py  js.py  main.py  render.py  server.py  system.py  template.py
lightweight_charts_server/static/: default.css  index.html  index.js  main.html  render.js  styles.css
lightweight_charts_server/static/js/: script.js
sample/functions/: line_indicators.py  live_data.py  setting_data.py  styling.py
src/: __init__.py  js.py  main.py
src/static/: default.css  main.html  styles.css
src/static/js/: functions.js  inject.js
