[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightweight-charts-server"
version = "0.2.2" # You must update before release push.
description = "lightweight-chart custom python server"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Won JeongHoo", email = "clomia.sig@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/vegaxholdings/lightweight-charts-server" }
dependencies = [
    "fastapi==0.112.0", 
    "uvicorn[standard]",
    "lightweight-charts==2.0.1", 
    "psutil==6.0.0",
    "portalocker==2.10.1",
    "uvicorn==0.30.5",
    "Jinja2==3.1.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lightweight_charts_server*"]

[tool.setuptools.package-data]
"*" = ["**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["**/__pycache__", "**/*.pyc", "**/*.pyo", "**/*.DS_Store", "**/*/inject.js"]